added a lamp and lighting shader, left only 2 cubes = {object, lamp}

--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -47,5 +47,11 @@
     <ClInclude Include="src\shader.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\vertices.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\indices.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
