--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -124,14 +124,18 @@
   <ItemGroup>
     <ClCompile Include="..\glad.c" />
     <ClCompile Include="src\camera.cpp" />
+    <ClCompile Include="src\dir_light.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\point_light.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
+    <ClInclude Include="src\dir_light.h" />
     <ClInclude Include="src\indices.h" />
+    <ClInclude Include="src\point_light.h" />
     <ClInclude Include="src\shader.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\vertices.h" />
