--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\dir_light.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\point_light.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\spot_light.cpp" />
