--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <ClCompile Include="..\glad.c" />
     <ClCompile Include="src\camera.cpp" />
+    <ClCompile Include="src\cube_model.cpp" />
     <ClCompile Include="src\dir_light.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mesh.cpp" />
@@ -135,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
+    <ClInclude Include="src\cube_model.h" />
     <ClInclude Include="src\dir_light.h" />
     <ClInclude Include="src\mesh.h" />
     <ClInclude Include="src\model.h" />
