added Simple Model class and a Simple Cube child

--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -144,6 +144,9 @@
     <ClInclude Include="src\plane_model.h" />
     <ClInclude Include="src\point_light.h" />
     <ClInclude Include="src\shader.h" />
+    <ClInclude Include="src\simple_cube.h" />
+    <ClInclude Include="src\simple_model.h" />
+    <ClInclude Include="src\sm_enum.h" />
     <ClInclude Include="src\spot_light.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\window.h" />
