--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -92,5 +92,14 @@
     <ClInclude Include="src\plane_model.h">
       <Filter>Source Files\Headers</Filter>
     </ClInclude>
+    <ClInclude Include="src\simple_model.h">
+      <Filter>Source Files\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\simple_cube.h">
+      <Filter>Source Files\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sm_enum.h">
+      <Filter>Source Files\Headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
