Separated model.h into a header and cpp file

--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="src\dir_light.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mesh.cpp" />
+    <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\plane_model.cpp" />
     <ClCompile Include="src\point_light.cpp" />
     <ClCompile Include="src\shader.cpp" />
