Made 2 models into Simple Models and fixed drawing functions

--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -51,12 +51,6 @@
     <ClCompile Include="src\mesh.cpp">
       <Filter>Source Files\Sources</Filter>
     </ClCompile>
-    <ClCompile Include="src\cube_model.cpp">
-      <Filter>Source Files\Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="src\plane_model.cpp">
-      <Filter>Source Files\Sources</Filter>
-    </ClCompile>
     <ClCompile Include="src\model.cpp">
       <Filter>Source Files\Sources</Filter>
     </ClCompile>
@@ -89,12 +83,6 @@
     <ClInclude Include="src\model.h">
       <Filter>Source Files\Headers</Filter>
     </ClInclude>
-    <ClInclude Include="src\cube_model.h">
-      <Filter>Source Files\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\plane_model.h">
-      <Filter>Source Files\Headers</Filter>
-    </ClInclude>
     <ClInclude Include="src\simple_model.h">
       <Filter>Source Files\Headers</Filter>
     </ClInclude>
@@ -102,6 +90,9 @@
       <Filter>Source Files\Headers</Filter>
     </ClInclude>
     <ClInclude Include="src\sm_enum.h">
+      <Filter>Source Files\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\simple_plane.h">
       <Filter>Source Files\Headers</Filter>
     </ClInclude>
   </ItemGroup>
