--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -124,12 +124,10 @@
   <ItemGroup>
     <ClCompile Include="..\glad.c" />
     <ClCompile Include="src\camera.cpp" />
-    <ClCompile Include="src\cube_model.cpp" />
     <ClCompile Include="src\dir_light.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\model.cpp" />
-    <ClCompile Include="src\plane_model.cpp" />
     <ClCompile Include="src\point_light.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\spot_light.cpp" />
@@ -138,15 +136,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
-    <ClInclude Include="src\cube_model.h" />
     <ClInclude Include="src\dir_light.h" />
     <ClInclude Include="src\mesh.h" />
     <ClInclude Include="src\model.h" />
-    <ClInclude Include="src\plane_model.h" />
     <ClInclude Include="src\point_light.h" />
     <ClInclude Include="src\shader.h" />
     <ClInclude Include="src\simple_cube.h" />
     <ClInclude Include="src\simple_model.h" />
+    <ClInclude Include="src\simple_plane.h" />
     <ClInclude Include="src\sm_enum.h" />
     <ClInclude Include="src\spot_light.h" />
     <ClInclude Include="src\stb_image.h" />
