added IPP class for image post-processing and created functionality to switch between normal, inversion, grayscale, blur, sharpen, edge-detection

--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="src\simple_model.h">
       <Filter>Source Files\Headers</Filter>
     </ClInclude>
+    <ClInclude Include="src\ipp.h">
+      <Filter>Source Files\Headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
