--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -123,38 +123,46 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\glad.c" />
-    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\dir_light.cpp" />
+    <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mesh.cpp" />
-    <ClCompile Include="src\models\model.cpp" />
+    <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\point_light.cpp" />
+    <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\shader.cpp" />
+    <ClCompile Include="src\ShaderLibrary.cpp" />
     <ClCompile Include="src\spot_light.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
+    <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Scene.h" />
+    <ClInclude Include="src\all_simple_models.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\dir_light.h" />
-    <ClInclude Include="src\models\all_simple_models.h" />
-    <ClInclude Include="src\models\meteor_orbit.h" />
-    <ClInclude Include="src\models\model.h" />
-    <ClInclude Include="src\models\SimpleCube.h" />
-    <ClInclude Include="src\models\SimplePlane.h" />
-    <ClInclude Include="src\models\SimpleQuad.h" />
-    <ClInclude Include="src\models\SimpleWindow.h" />
-    <ClInclude Include="src\models\simple_model.h" />
+    <ClInclude Include="src\Entity.h" />
+    <ClInclude Include="src\meteor_orbit.h" />
+    <ClInclude Include="src\model.h" />
     <ClInclude Include="src\particle_effects.h" />
     <ClInclude Include="src\ipp.h" />
     <ClInclude Include="src\mesh.h" />
     <ClInclude Include="src\point_light.h" />
+    <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\Scene1.h" />
     <ClInclude Include="src\shader.h" />
+    <ClInclude Include="src\ShaderLibrary.h" />
+    <ClInclude Include="src\SimpleCube.h" />
+    <ClInclude Include="src\SimplePlane.h" />
+    <ClInclude Include="src\SimpleQuad.h" />
+    <ClInclude Include="src\SimpleWindow.h" />
+    <ClInclude Include="src\simple_model.h" />
     <ClInclude Include="src\skybox.h" />
     <ClInclude Include="src\spot_light.h" />
     <ClInclude Include="src\stb_image.h" />
+    <ClInclude Include="src\Texture.h" />
+    <ClInclude Include="src\Transform.h" />
     <ClInclude Include="src\window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
